style.css
html, body {
  padding: 0;
  margin: 0;
}

body {
  min-width: 768px;
  font-weight: 400;
  font-size: 14px;
  line-height: 21px;
  font-family: 'PT Sans', Arial, sans-serif;
  text-transform: uppercase;
  color: #333333;

  background-color: #f2f2f2;
}

.wrapper {
  position: relative;

  min-width: 768px;
  max-width: 1200px;
  margin: 0 auto;

  background-color: #ffffff;
  box-shadow: 0 5px 15px rgba(0, 1, 1, 0.2);
}

.container {
  padding-left: 6%;
  padding-right: 6%;
}

img {
  max-width: 100%;
  height: auto;
}

.visually-hidden {
  position: absolute !important;
  z-index: -1;

  width: 1px !important;
  height: 1px !important;
  padding: 0 !important;
  margin: -1px !important;

  border: 0 !important;
  overflow: hidden !important;
  clip: rect(0, 0, 0, 0);
  clip-path: inset(100%);
}

.flex-columns {
  display: flex;
  flex-wrap: wrap;
}

.flex-reverse {
  flex-direction: row-reverse;
}

.flex-col {
  width: 33.33%;
}

.flex-col-2 {
  width: 66.67%;
}

.flex-col-3 {
  width: 100%;
}

.title {
  display: block;
  margin: 0;
  margin-bottom: 20px;

  font-weight: 700;
  font-size: 30px;
  line-height: 36px;
  color: #000000;
}

.button {
  box-sizing: border-box;
  display: inline-block;
  padding: 16px 18px;

  font-weight: 700;
  font-size: 21px;
  line-height: 26px;
  text-transform: uppercase;
  text-decoration: none;
  text-align: center;
  color: #ffffff;

  background-color: #81b3d2;
  border: 0;

  cursor: pointer;
}

.button:hover,
.button:focus {
  background-color: #669ec0;
}

.button:active {
  color: rgba(255, 255, 255, 0.3);
  background-color: #5496bd;
}

.button-brown {
  background-color: #766357;
}

.button-brown:hover,
.button-brown:focus {
  background-color: #604e43;
}

.button-brown:active {
  background-color: #503e33;
}

.button-submit {
  width: 100%;
}

.modal {
  position: fixed;
  left: 50%;
  top: 50%;
  z-index: 10;

  display: none;
  padding: 55px;

  text-align: left;

  background-color: #ffffff;
  box-shadow: 0 7px 15px rgba(0, 1, 1, 0.15);
  transform: translate(-50%, -50%);
}

@keyframes slideDown {
  0% { max-height: 0px; overflow: hidden; }
  10% { max-height: 100px; }
  35% { max-height: 300px; }
  55% { max-height: 450px; }
  70% { max-height: 600px; }
  90% { max-height: 900px; }
  100% { max-height: none; overflow: auto; }
}

.modal-show {
  display: block;

  animation-name: slideDown;
  animation-duration: 1s;
  animation-timing-function: linear;
}

.main-nav {
  position: relative;
}

.main-header-logo {
  position: absolute;
  top: 0;
  left: 50%;
  z-index: 2;

  width: 138px;
  height: 70px;
  margin-left: -69px;
  overflow: hidden;
}

.site-nav {
  display: flex;
  flex-wrap: wrap;
  padding: 0 6%;
  margin: 0;

  font-weight: 700;
  font-size: 14px;
  line-height: 26px;

  list-style: none;
}

.site-nav > li {
  box-sizing: border-box;
  width: 20%;
  padding: 15px 0;
}

.site-nav > li:nth-child(4n + 3),
.site-nav > li:nth-child(4n + 4) {
  text-align: right;
}

.site-nav > li:nth-child(4n + 3) {
  margin-left: auto;
}

.site-nav a {
  text-decoration: none;
  color: #000000;
}

.site-nav a:hover,
.site-nav a:focus {
  color: #81b3d2;
}

.site-nav a:active {
  color: rgba(0, 0, 0, 0.3);
}

.site-nav .site-nav-active a {
  color: #766357;
}

.main-footer {
  padding-top: 36px;
  padding-bottom: 36px;

  text-align: center;
  color: #000000;

  background-color: rgba(254, 254, 254, 0.9);
}

.home-page .main-footer {
  position: absolute;
  left: 0;
  bottom: 0;

  width: 100%;
}

.main-footer.flex-columns {
  align-items: center;
}

.main-footer-hashtag {
  margin: 0;

  font-weight: 700;
  font-size: 21px;
  line-height: 26px;
}

.main-footer-social {
  display: flex;
  flex-wrap: wrap;
  justify-content: center;
  padding: 0;
  margin: 0;

  list-style: none;
}

.main-footer-social > li {
  margin-right: 6px;
}

.main-footer-social > li:last-child {
  margin-right: 0;
}

.social-link {
  position: relative;

  display: flex;
  justify-content: center;
  align-items: center;
  width: 46px;
  height: 48px;

  text-indent: -9999px;

  background-color: #81b3d2;

  overflow: hidden;
}

.social-link:hover,
.social-link:focus {
  background-color: #669ec0;
}

.social-link:active {
  background-color: #5496bd;
}

.social-link::before {
  content: "";

  display: block;

  background-position: 0% 0%;
  background-repeat: no-repeat;
}

.social-link:active::before {
  opacity: 0.3;
}

.social-link-twitter::before {
  width: 17px;
  height: 15px;

  background-image: url("img/social-t.svg");
}

.social-link-facebook::before {
  width: 12px;
  height: 22px;

  background-image: url("img/social-fb.svg");
}

.social-link-youtube::before {
  width: 20px;
  height: 16px;

  background-image: url("img/social-youtube.svg");
}

.main-footer-developer {
  margin: 0;

  font-size: 14px;
  line-height: 26px;
}

.main-footer-developer-link svg {
  width: 115px;
  height: 41px;

  vertical-align: middle;
}

.main-footer-developer-link path {
  fill: #231f20;
}

.main-footer-developer-link:hover path,
.main-footer-developer-link:hover rect,
.main-footer-developer-link:focus path,
.main-footer-developer-link:focus rect {
  fill: #81b3d2;
}

.main-footer-developer-link:active path,
.main-footer-developer-link:active rect {
  fill: #bdbbbc;
}

.intro-banner {
  position: relative;

  height: 512px;
  margin-bottom: 60px;

  overflow: hidden;
}

.intro-banner::after {
  content: "";

  position: absolute;
  left: 0;
  bottom: 0;

  width: 100%;
  height: 57px;

  background-image: url("img/intro-mask.png");
  background-position: 0% 0%;
  background-repeat: repeat-y;
  background-size: 100% 100%;
}

.intro-text {
  position: absolute;
  left: 50%;
  top: 76px;
  /* z-index: 1; */

  width: 458px;
  height: 352px;
  margin-left: -229px;
}

.intro-bg {
  position: absolute;
  left: 0;
  top: 0;

  width: 100%;
  height: auto;
}

@media (min-width: 992px) {
  .intro-bg {
    margin-top: -6.917%;
  }
}
/* ... */

